--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPane" prefHeight="736.0" prefWidth="355.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainPane" minHeight="0.0" minWidth="0.0" prefHeight="704.0" prefWidth="355.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox alignment="CENTER" prefHeight="726.0" prefWidth="355.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="726.0" prefWidth="355.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#carClicked" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -25,10 +25,10 @@
             <Button fx:id="mgClientsButton" mnemonicParsing="false" onAction="#clientsClicked" text="Clientes" />
             <Button fx:id="mgVehiclesButton" mnemonicParsing="false" onAction="#vehiclesClicked" text="Vehículos" />
             <Button fx:id="mgMapButton" mnemonicParsing="false" onAction="#mapClicked" text="Mapa" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="47.0" prefWidth="8.0" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="18.0" prefWidth="63.0" />
             <Button fx:id="mgUsersButton" mnemonicParsing="false" onAction="#usersClicked" text="Usuarios" />
             <Button fx:id="mgReportsButton" mnemonicParsing="false" onAction="#reportsClicked" text="Reportes" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="22.0" prefWidth="5.0" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="11.0" prefWidth="30.0" />
             <Button fx:id="mgExitButton" mnemonicParsing="false" onAction="#exitClicked" text="Salir" />
          </children>
       </VBox>
