--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane fx:id="mainPane" minHeight="0.0" minWidth="0.0" prefHeight="704.0" prefWidth="355.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="726.0" prefWidth="355.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="355.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#carClicked" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -34,7 +34,7 @@
       </VBox>
    </left>
    <center>
-      <BorderPane fx:id="currentScene" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="782.0" minWidth="0.0" prefHeight="782.0" styleClass="current-scene" BorderPane.alignment="CENTER">
+      <BorderPane fx:id="currentScene" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" minWidth="0.0" styleClass="current-scene" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin></BorderPane>
