--- a/src/ui/fxml/clients-view.fxml
+++ b/src/ui/fxml/clients-view.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView fx:id="clientsTBV" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="clientsTBV" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="clientsNameCOL" minWidth="0.0" prefWidth="75.0" text="Nombre" />
           <TableColumn fx:id="clientsIDCOL" minWidth="0.0" prefWidth="75.0" text="Identificación" />
@@ -25,7 +25,7 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" focusTraversable="true" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" focusTraversable="true" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
             <Button minWidth="0.0" mnemonicParsing="false" onAction="#addClient" text="Añadir" />
             <Button fx:id="clientDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteClient" text="Deshabilitar" />
