--- a/src/ui/fxml/parking-slot.fxml
+++ b/src/ui/fxml/parking-slot.fxml
@@ -8,9 +8,9 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="100.0" styleClass="parking-slot" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox fx:id="slotBDP" alignment="CENTER" onContextMenuRequested="#showSlotInformation" BorderPane.alignment="CENTER">
+      <VBox fx:id="slotBDP" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" onContextMenuRequested="#showSlotInformation" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="slotNumberLBL" alignment="CENTER" prefHeight="28.0" styleClass="slot" text="N" textAlignment="CENTER" />
+            <Label fx:id="slotNumberLBL" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="28.0" styleClass="slot" text="N" textAlignment="CENTER" />
             <Rectangle fx:id="vehicleRCT" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" width="25.0" />
             <Circle fx:id="bikeCRC" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" />
          </children>
