--- a/src/ui/fxml/vehicles-view.fxml
+++ b/src/ui/fxml/vehicles-view.fxml
@@ -13,15 +13,15 @@
 
 <BorderPane id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView fx:id="vehiclesTBV" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="vehiclesTBV" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-            <TableColumn fx:id="vehiclePlateCOL" prefWidth="75.0" text="Placa" />
-            <TableColumn fx:id="vehicleModelCol" prefWidth="75.0" text="Modelo" />
-          <TableColumn fx:id="vehicleTypeCOL" prefWidth="75.0" text="Tipo" />
-            <TableColumn fx:id="vehicleColorCOL" prefWidth="75.0" text="Color" />
-            <TableColumn fx:id="vehicleSlotCOL" prefWidth="75.0" text="Puesto" />
-          <TableColumn fx:id="vehicleStayCOL" prefWidth="75.0" text="Estadía" />
-            <TableColumn fx:id="vehicleEnabledCOL" prefWidth="75.0" text="Habilitado" />
+            <TableColumn fx:id="vehiclePlateCOL" minWidth="0.0" prefWidth="75.0" text="Placa" />
+            <TableColumn fx:id="vehicleModelCol" minWidth="0.0" prefWidth="75.0" text="Modelo" />
+          <TableColumn fx:id="vehicleTypeCOL" minWidth="0.0" prefWidth="75.0" text="Tipo" />
+            <TableColumn fx:id="vehicleColorCOL" minWidth="0.0" prefWidth="75.0" text="Color" />
+            <TableColumn fx:id="vehicleSlotCOL" minWidth="0.0" prefWidth="75.0" text="Puesto" />
+          <TableColumn fx:id="vehicleStayCOL" minWidth="0.0" prefWidth="75.0" text="Estadía" />
+            <TableColumn fx:id="vehicleEnabledCOL" minWidth="0.0" prefWidth="75.0" text="Habilitado" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -29,7 +29,7 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="29.0" prefWidth="6.0" />
             <Button fx:id="vehicleEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editVehicle" text="Editar" />
