--- a/src/ui/fxml/clients-view.fxml
+++ b/src/ui/fxml/clients-view.fxml
@@ -31,7 +31,7 @@
             <Button fx:id="clientDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteClient" text="Deshabilitar" />
             <Button fx:id="clientEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editClient" text="Editar" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="24.0" prefWidth="1.0" />
-            <TextField fx:id="clientSearchTXT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="37.0" prefWidth="162.0" />
+            <TextField fx:id="clientSearchTXT" maxWidth="-Infinity" minWidth="-Infinity" onAction="#searchClient" prefHeight="37.0" prefWidth="162.0" />
             <Button fx:id="clientSearchBTN" minWidth="0.0" mnemonicParsing="false" onAction="#searchClient" text="Buscar" />
          </children>
          <BorderPane.margin>
