--- a/src/ui/fxml/reports.fxml
+++ b/src/ui/fxml/reports.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="529.0" prefWidth="681.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane fx:id="reportPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="800.0" prefWidth="780.0" styleClass="background" VBox.vgrow="ALWAYS">
+      <BorderPane fx:id="reportPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="667.0" prefWidth="780.0" styleClass="background" VBox.vgrow="ALWAYS">
          <center>
-            <HBox id="container" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER">
+            <HBox id="container" alignment="CENTER" prefHeight="625.0" prefWidth="780.0" spacing="15.0" style="-fx-background-color: transparent;" BorderPane.alignment="CENTER">
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0" styleClass="foreground" HBox.hgrow="ALWAYS">
                      <children>
@@ -53,8 +53,11 @@
                   </VBox>
                </children>
                <padding>
-                  <Insets left="10.0" right="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
             </HBox>
          </center>
          <bottom>
@@ -68,7 +71,7 @@
             </HBox>
          </bottom>
          <top>
-            <HBox alignment="CENTER" prefHeight="51.0" prefWidth="600.0" spacing="5.0" stylesheets="@../css/choicebox-light.css">
+            <HBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="51.0" prefWidth="600.0" spacing="5.0" stylesheets="@../css/choicebox-light.css">
                <children>
                   <Label text="Tipo de reporte:">
                      <HBox.margin>
